syntax = "proto3";

package candle;
option go_package = "./proto";

// Candle represents a single trading candle
message Candle {
  string symbol = 1;
  string open = 2;
  string high = 3;
  string low = 4;
  string close = 5;
  string volume = 6;
  string start_timestamp = 7;
  string end_timestamp = 8;
}

// SubscriptionRequest contains the list of symbols to subscribe to
message SubscriptionRequest {
  repeated string symbols = 1;
}

// CandleService defines the gRPC service for streaming candles
service CandleService {
  // Subscribe initiates a streaming connection for receiving candle updates
  rpc Subscribe(SubscriptionRequest) returns (stream Candle) {}
}
